--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,23 +13,23 @@
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080175.md#1" title="疫情“隔离”下 美国人如何给我女儿过生日""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/IMG_2614-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081951.md#1" title="【直播回放】5.4疫情追踪：中国南北爆疫情""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/05/download-12-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://eyk232.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
-:clock8: <em>43分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082609.md#1">参议员克鲁兹：大瘟疫后 需重估美中关系</a><br>
-:clock8: <em>48分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083184.md#1">科技和能源股领涨 美三大股指开低走高</a><br>
+:clock8: <em>56分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/3/25/n11974588.md#1">持续更新：亚省“中共病毒”疫情一览</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12082609.md#1">参议员克鲁兹：大瘟疫后 需重估美中关系</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/5/n12083184.md#1">科技和能源股领涨 美三大股指开低走高</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083129.md#1">王全璋详述冤情：定不了煽颠罪 就定颠覆罪</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1">中共长臂深入美国大学 国会议员展开调查</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1">【一线采访】疫情下 大陆教育培训业关店频</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12083104.md#1">中共长臂深入美国大学 国会议员展开调查</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080385.md#1">【一线采访】疫情下 大陆教育培训业关店频</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079946.md#1">中共四分钟歌曲激怒亚洲民众 20万人踩</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078982.md#1">【翻墙必看】金正恩露面手腕惊现神秘疤痕</a><br>
-<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12080048.md#1">网传邓朴方公开信 红二代：代表部分人心声</a><br>
+<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078979.md#1">金正恩右手现新疤痕 专家：或做了心脏手术</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12080750.md#1">【翻墙必看】央视泼妇式骂班农遭网民嘲讽</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12076680.md#1">中共瞒疫被追责 专家与外交官不同调的背后</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12078978.md#1">瘟疫冲击出口 中国经济“无复苏迹象”</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12077164.md#1">华商经阿里巴巴购货遇黑心土豆?损失难获赔</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079852.md#1">【全球疫情直击】情报机构曝中共瞒疫毁证据</a><br>
-<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/3/n12079279.md#1">黑龙江疫情再告急 牡丹江紧急叫停餐饮堂食</a><br>
+<a href="https://github.com/eyk232/djy/blob/master/gb/20/5/1/n12074400.md#1">“本福德定律”验证中共疫情数据造假</a><br>
 <br><p align="center"><a href="https://github.com/eyk232/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/4/n12081800.md#1">美国加速与中共经济脱钩 建立新经济圈</a><br>
 <a href="https://github.com/eyk232/djy/blob/master/gb/20/5/2/n12078619.md#1">【瘟疫与中共】死亡名单中党员占大多数</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 355,468,553 人
+!共 355,470,207 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
